更新 - 样式配置

--- a/views/_base/header.ejs
+++ b/views/_base/header.ejs
@@ -1,9 +1,13 @@
 <div class="app-header">
-    <div class="header-logo">
-        <a href="/" class="logo-ico">
-            <img src="/images/logo.png">
-        </a>
+    <div class="header-line">
+
     </div>
-    <div class="header-nav"></div>
-    <div class="header-connection"></div>
+    <div class="header-container">
+        <div class="header-logo">
+            <a href="/" class="logo-ico">
+                <img src="/images/logo.png">
+            </a>
+        </div>
+        <div class="header-nav"></div>
+    </div>
 </div>
