--- a/public/stylesheets/general/headers.scss
+++ b/public/stylesheets/general/headers.scss
@@ -1,12 +1,17 @@
 .app-header {
   width: 100%;
-  height: 100px;
+  height: 110px;
   padding: 10px 10%;
-  .header-logo {
-    height: 100%;
-    .logo-ico {
-      height: 100%;
-      width: 300px;
+  .header-line {
+    height: 10px;
+  }
+  .header-container {
+    height: 100px;
+    .header-logo {
+      .logo-ico {
+        height: 100%;
+        width: 300px;
+      }
     }
   }
 }
